@@ -74,7 +74,12 @@
   </tr>
   <tr>
     <td valign="top">resource</td>
-    <td valign="top">Name of the resouce to load definitions from.</td>
+    <td valign="top">
+    Name of the resource to load definitions from.
+    If there is multiple resources of this name in the classpath, and the
+    format is "properties", the first resource will be loaded, otherwise
+    all the resources will be loaded.
+    </td>
     <td valign="top" align="center">No</td>
   </tr>
   <tr>
